--- a/index.html
+++ b/index.html
@@ -71,6 +71,23 @@
       return code && regex.test(code);
     }
 
+    async function fetchIceServers() {
+      try {
+        const apiKey = '0f51046d43c95016b1ea8883812c00532db3';
+        const response = await fetch('https://anonmess.metered.live/api/v1/turn/credentials?apiKey=' + apiKey);
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        const iceServers = await response.json();
+        console.log('Fetched ICE servers:', JSON.stringify(iceServers));
+        return iceServers.concat([{ urls: ['stun:stun.l.google.com:19302'] }]);
+      } catch (error) {
+        console.error('Error fetching ICE servers:', error);
+        statusElement.textContent = 'Failed to fetch TURN credentials. Using fallback STUN.';
+        return [{ urls: ['stun:stun.l.google.com:19302'] }];
+      }
+    }
+
     let code = generateCode();
     let clientId = '';
     let isInitiator = false;
@@ -278,24 +295,13 @@
       }
     }
 
-    function startPeerConnection(targetId, isOfferer) {
+    async function startPeerConnection(targetId, isOfferer) {
       console.log(`Starting peer connection with ${targetId} for code: ${code}, offerer: ${isOfferer}`);
       if (peerConnections.has(targetId)) {
         console.log(`Cleaning up existing connection with ${targetId}`);
         cleanupPeerConnection(targetId);
       }
-      const iceServers = [
-        {
-          urls: [
-            'turn:openrelay.metered.ca:80',
-            'turn:openrelay.metered.ca:443',
-            'turn:openrelay.metered.ca:443?transport=tcp'
-          ],
-          username: 'dc85ccffcaf7e92353f1bc13',
-          credential: 'HMLwQ4OAU9hlIgzh'
-        },
-        { urls: ['stun:stun.l.google.com:19302'] }
-      ];
+      const iceServers = await fetchIceServers();
       console.log(`Using ICE servers: ${JSON.stringify(iceServers)}`);
       const peerConnection = new RTCPeerConnection({ iceServers });
       peerConnections.set(targetId, peerConnection);
@@ -396,7 +402,7 @@
       }
 
       const timeout = setTimeout(() => {
-        if (!dataChannels.get(targetId)?.readyState === 'open') {
+        if (!dataChannels.get(targetId) || dataChannels.get(targetId).readyState !== 'open') {
           console.log(`Connection timed out with ${targetId} for code: ${code}`);
           cleanupPeerConnection(targetId);
           const retryCount = retryCounts.get(targetId) || 0;
