--- a/index.html
+++ b/index.html
@@ -73,18 +73,28 @@
 
     async function fetchIceServers() {
       try {
-        const apiKey = '0f51046d43c95016b1ea8883812c00532db3';
-        const response = await fetch('https://anonmess.metered.live/api/v1/turn/credentials?apiKey=' + apiKey);
+        const apiKey = '20409a1726332ccf335585493153f4e3eafb';
+        const response = await fetch(`https://anonmess.metered.live/api/v1/turn/credentials?apiKey=${apiKey}`);
         if (!response.ok) {
           throw new Error(`HTTP error! status: ${response.status}`);
         }
         const iceServers = await response.json();
         console.log('Fetched ICE servers:', JSON.stringify(iceServers));
-        return iceServers.concat([{ urls: ['stun:stun.l.google.com:19302'] }]);
+        return iceServers.concat([
+          { urls: 'stun:stun.l.google.com:19302' },
+          { urls: 'stun:stun1.l.google.com:19302' },
+          { urls: 'stun:stun2.l.google.com:19302' }
+          // Optional: Add Twilio TURN server if you have credentials
+          // { urls: 'turn:global.turn.twilio.com:3478', username: 'your-twilio-username', credential: 'your-twilio-credential' }
+        ]);
       } catch (error) {
         console.error('Error fetching ICE servers:', error);
         statusElement.textContent = 'Failed to fetch TURN credentials. Using fallback STUN.';
-        return [{ urls: ['stun:stun.l.google.com:19302'] }];
+        return [
+          { urls: 'stun:stun.l.google.com:19302' },
+          { urls: 'stun:stun1.l.google.com:19302' },
+          { urls: 'stun:stun2.l.google.com:19302' }
+        ];
       }
     }
 
@@ -98,7 +108,7 @@
     let dataChannels = new Map();
     let connectionTimeouts = new Map();
     let retryCounts = new Map();
-    const maxRetries = 1;
+    const maxRetries = 3;
     let candidatesQueues = new Map();
     let processedMessageIds = new Set();
     let processedAnswers = new Set();
@@ -222,15 +232,15 @@
             updateMaxClientsUI();
           }
           if (message.type === 'offer' && message.clientId !== clientId) {
-            console.log(`Received offer from ${message.clientId} for code: ${code}`);
+            console.log(`Received offer from ${message.clientId} for code: ${code}, offer: ${JSON.stringify(message.offer)}`);
             handleOffer(message.offer, message.clientId);
           }
           if (message.type === 'answer' && message.clientId !== clientId) {
-            console.log(`Received answer from ${message.clientId} for code: ${code}`);
+            console.log(`Received answer from ${message.clientId} for code: ${code}, answer: ${JSON.stringify(message.answer)}`);
             handleAnswer(message.answer, message.clientId);
           }
           if (message.type === 'candidate' && message.clientId !== clientId) {
-            console.log(`Received ICE candidate from ${message.clientId} for code: ${code}`);
+            console.log(`Received ICE candidate from ${message.clientId} for code: ${code}, candidate: ${JSON.stringify(message.candidate)}`);
             handleCandidate(message.candidate, message.clientId);
           }
         } catch (error) {
@@ -325,7 +335,7 @@
       };
 
       peerConnection.onicecandidateerror = (event) => {
-        console.error(`ICE candidate error for ${targetId}: address=${event.address}, port=${event.port}, errorCode=${event.errorCode}, errorText=${event.errorText}`);
+        console.error(`ICE candidate error for ${targetId}: address=${event.address}, port=${event.port}, errorCode=${event.errorCode}, errorText=${event.errorText}, url=${event.url}`);
       };
 
       peerConnection.onsignalingstatechange = () => {
@@ -358,7 +368,7 @@
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
             startPeerConnection(targetId, isOfferer);
           } else {
-            statusElement.textContent = 'Connection failed. Please try again.';
+            statusElement.textContent = 'Connection failed after retries. Please try a new session.';
           }
         } else if (peerConnection.connectionState === 'connected') {
           console.log(`WebRTC connection established with ${targetId} for code: ${code}`);
@@ -395,7 +405,7 @@
               console.log(`ICE gathering timeout, sending offer to ${targetId}`);
               socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code, targetId }));
             }
-          }, 10000);
+          }, 20000);
         }).catch(error => {
           console.error(`Error creating offer for ${targetId}:`, error);
         });
@@ -411,10 +421,10 @@
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
             startPeerConnection(targetId, isOfferer);
           } else {
-            statusElement.textContent = 'Connection failed. Please try again.';
+            statusElement.textContent = 'Connection failed after retries. Please try a new session.';
           }
         }
-      }, 10000);
+      }, 20000);
       connectionTimeouts.set(targetId, timeout);
     }
 
@@ -512,7 +522,7 @@
     }
 
     async function handleAnswer(answer, targetId) {
-      console.log(`Handling answer from ${targetId} for code: ${code}`);
+      console.log(`Handling answer from ${targetId} for code: ${code}, answer: ${JSON.stringify(answer)}`);
       const peerConnection = peerConnections.get(targetId);
       if (!peerConnection) {
         console.warn(`No peer connection for ${targetId}, ignoring answer`);
@@ -546,7 +556,7 @@
     }
 
     function handleCandidate(candidate, targetId) {
-      console.log(`Handling ICE candidate from ${targetId} for code: ${code}`);
+      console.log(`Handling ICE candidate from ${targetId} for code: ${code}, candidate: ${JSON.stringify(candidate)}`);
       const peerConnection = peerConnections.get(targetId);
       if (peerConnection && peerConnection.remoteDescription) {
         peerConnection.addIceCandidate(new RTCIceCandidate(candidate)).then(() => {
