--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,7 +30,7 @@
       </div>
       <div id="connectContainer" class="hidden">
         <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)">
-        <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code to connect">
+        <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)">
         <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600">Connect</button>
         <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600">Back</button>
       </div>
@@ -62,6 +61,11 @@
       return username && regex.test(username);
     }
 
+    function validateCode(code) {
+      const regex = /^[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}$/;
+      return code && regex.test(code);
+    }
+
     let code = generateCode();
     let clientId = '';
     let isInitiator = false;
@@ -72,12 +76,13 @@
     let dataChannels = new Map();
     let connectionTimeouts = new Map();
     let retryCounts = new Map();
-    const maxRetries = 1; // Reduced from 2
+    const maxRetries = 2;
     let candidatesQueues = new Map();
     let processedMessageIds = new Set();
-    let processedAnswers = new Set(); // New: Track processed answers
+    let processedAnswers = new Set();
     let username = null;
     let usernames = new Map();
+    let joinTimeout = null;
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -128,6 +133,7 @@
             chatContainer.classList.add('hidden');
             newSessionButton.classList.add('hidden');
             maxClientsContainer.classList.add('hidden');
+            clearTimeout(joinTimeout);
           }
           return;
         }
@@ -156,6 +162,7 @@
             console.log(`Updated usernames: ${message.clientId} -> ${message.username}, usernames: ${[...usernames.entries()]}`);
           }
           updateMaxClientsUI();
+          clearTimeout(joinTimeout);
           if (isInitiator && message.clientId !== clientId && !peerConnections.has(message.clientId)) {
             console.log(`Initiating peer connection with client ${message.clientId}`);
             startPeerConnection(message.clientId, true);
@@ -175,15 +182,15 @@
           updateMaxClientsUI();
         }
         if (message.type === 'offer' && message.clientId !== clientId) {
-          console.log(`Received offer from ${message.clientId} for code: ${code}`);
+          console.log(`Received offer from ${message.clientId} for code: ${code}, offer SDP: ${message.offer.sdp.substring(0, 100)}...`);
           handleOffer(message.offer, message.clientId);
         }
         if (message.type === 'answer' && message.clientId !== clientId) {
-          console.log(`Received answer from ${message.clientId} for code: ${code}`);
+          console.log(`Received answer from ${message.clientId} for code: ${code}, answer SDP: ${message.answer.sdp.substring(0, 100)}...`);
           handleAnswer(message.answer, message.clientId);
         }
         if (message.type === 'candidate' && message.clientId !== clientId) {
-          console.log(`Received ICE candidate from ${message.clientId} for code: ${code}`);
+          console.log(`Received ICE candidate from ${message.clientId} for code: ${code}, candidate: ${JSON.stringify(message.candidate)}`);
           handleCandidate(message.candidate, message.clientId);
         }
       } catch (error) {
@@ -255,10 +262,21 @@
         iceServers: [
           { urls: 'stun:stun.l.google.com:19302' },
           { urls: 'stun:stun1.l.google.com:19302' },
-          { 
-            urls: ['turn:openrelay.metered.ca:80', 'turn:openrelay.metered.ca:443'], 
-            username: 'openrelayproject', 
-            credential: 'openrelayproject'
+          { urls: 'stun:stun2.l.google.com:19302' },
+          {
+            urls: [
+              'turn:global.relay.metered.ca:80',
+              'turn:global.relay.metered.ca:443',
+              'turn:global.relay.metered.ca:80?transport=tcp',
+              'turns:global.relay.metered.ca:443?transport=tcp'
+            ],
+            username: '8008f3d422fbe49ca4157b23',
+            credential: 'E7rLb3LegFMDdjem'
+          },
+          {
+            urls: 'turn:turn.anyfirewall.com:3478',
+            username: 'webrtc',
+            credential: 'webrtc'
           }
         ],
         iceTransportPolicy: 'all'
@@ -276,16 +294,21 @@
 
       peerConnection.onicecandidate = (event) => {
         if (event.candidate) {
-          console.log(`Sending ICE candidate to ${targetId} for code: ${code}`);
+          console.log(`Sending ICE candidate to ${targetId} for code: ${code}: ${JSON.stringify(event.candidate)}`);
           socket.send(JSON.stringify({ type: 'candidate', candidate: event.candidate, code, targetId }));
+        } else {
+          console.log(`No more ICE candidates for ${targetId}`);
         }
       };
 
-      let iceTimeout;
+      peerConnection.onicecandidateerror = (event) => {
+        console.error(`ICE candidate error for ${targetId}: address=${event.address}, port=${event.port}, errorCode=${event.errorCode}, errorText=${event.errorText}, url=${event.url}`);
+      };
+
       peerConnection.onicegatheringstatechange = () => {
         console.log(`ICE gathering state for ${targetId}: ${peerConnection.iceGatheringState}`);
         if (peerConnection.iceGatheringState === 'complete' && isOfferer) {
-          clearTimeout(iceTimeout); // Clear timeout on completion
+          clearTimeout(iceTimeout);
           console.log(`ICE gathering complete, sending offer to ${targetId}`);
           socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code, targetId }));
         }
@@ -294,6 +317,7 @@
       peerConnection.onconnectionstatechange = () => {
         console.log(`Connection state for ${targetId}: ${peerConnection.connectionState}`);
         if (peerConnection.connectionState === 'disconnected' || peerConnection.connectionState === 'failed') {
+          console.error(`Connection failed with ${targetId}: ${peerConnection.connectionState}`);
           statusElement.textContent = 'Connection failed. Retrying...';
           cleanupPeerConnection(targetId);
           const retryCount = retryCounts.get(targetId) || 0;
@@ -302,13 +326,13 @@
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
             startPeerConnection(targetId, isOfferer);
           } else {
-            statusElement.textContent = 'Connection failed. Please try again.';
+            statusElement.textContent = 'Connection failed after retries. Please try a new session.';
           }
         } else if (peerConnection.connectionState === 'connected') {
           console.log(`WebRTC connection established with ${targetId} for code: ${code}`);
           isConnected = true;
           retryCounts.delete(targetId);
-          clearTimeout(iceTimeout); // Clear timeout on connection
+          clearTimeout(iceTimeout);
           updateMaxClientsUI();
         }
       };
@@ -329,23 +353,27 @@
         dataChannels.set(targetId, dataChannel);
       };
 
+      let iceTimeout;
       if (isOfferer) {
         peerConnection.createOffer().then(offer => {
+          console.log(`Created offer for ${targetId}: ${offer.sdp.substring(0, 100)}...`);
           return peerConnection.setLocalDescription(offer);
         }).then(() => {
+          console.log(`Local description set for ${targetId}`);
           iceTimeout = setTimeout(() => {
             if (peerConnection.iceGatheringState !== 'complete') {
               console.log(`ICE gathering timeout, sending offer to ${targetId}`);
               socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code, targetId }));
             }
-          }, 5000);
+          }, 30000);
         }).catch(error => {
           console.error(`Error creating offer for ${targetId}:`, error);
+          statusElement.textContent = 'Failed to create offer. Please try again.';
         });
       }
 
       const timeout = setTimeout(() => {
-        if (!dataChannels.get(targetId)?.readyState === 'open') {
+        if (!dataChannels.get(targetId) || dataChannels.get(targetId).readyState !== 'open') {
           console.log(`Connection timed out with ${targetId} for code: ${code}`);
           cleanupPeerConnection(targetId);
           const retryCount = retryCounts.get(targetId) || 0;
@@ -354,10 +382,10 @@
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
             startPeerConnection(targetId, isOfferer);
           } else {
-            statusElement.textContent = 'Connection timed out. Please try again.';
+            statusElement.textContent = 'Connection failed after retries. Please try a new session.';
           }
         }
-      }, 10000);
+      }, 30000);
       connectionTimeouts.set(targetId, timeout);
     }
 
@@ -424,35 +452,38 @@
       };
     }
 
-    function handleOffer(offer, targetId) {
-      console.log(`Handling offer from ${targetId} for code: ${code}`);
+    async function handleOffer(offer, targetId) {
+      console.log(`Handling offer from ${targetId} for code: ${code}, offer SDP: ${offer.sdp.substring(0, 100)}...`);
       if (offer.type !== 'offer') {
         console.error(`Received invalid offer type from ${targetId}:`, offer.type);
         return;
       }
       if (!peerConnections.has(targetId)) {
+        console.log(`No existing peer connection for ${targetId}, starting new one`);
         startPeerConnection(targetId, false);
       }
       const peerConnection = peerConnections.get(targetId);
-      peerConnection.setRemoteDescription(new RTCSessionDescription(offer)).then(() => {
-        console.log(`Creating answer for ${targetId}`);
-        return peerConnection.createAnswer();
-      }).then(answer => {
-        return peerConnection.setLocalDescription(answer);
-      }).then(() => {
+      try {
+        await peerConnection.setRemoteDescription(new RTCSessionDescription(offer));
+        console.log(`Successfully set remote description for offer from ${targetId}`);
+        const answer = await peerConnection.createAnswer();
+        console.log(`Created answer for ${targetId}: ${answer.sdp.substring(0, 100)}...`);
+        await peerConnection.setLocalDescription(answer);
+        console.log(`Sending answer to ${targetId} for code: ${code}, answer SDP: ${peerConnection.localDescription.sdp.substring(0, 100)}...`);
         socket.send(JSON.stringify({ type: 'answer', answer: peerConnection.localDescription, code, targetId }));
         const queue = candidatesQueues.get(targetId) || [];
         queue.forEach(candidate => {
           handleCandidate(candidate, targetId);
         });
         candidatesQueues.set(targetId, []);
-      }).catch(error => {
+      } catch (error) {
         console.error(`Error handling offer from ${targetId}:`, error);
-      });
+        statusElement.textContent = 'Failed to process offer. Please try again.';
+      }
     }
 
-    function handleAnswer(answer, targetId) {
-      console.log(`Handling answer from ${targetId} for code: ${code}`);
+    async function handleAnswer(answer, targetId) {
+      console.log(`Handling answer from ${targetId} for code: ${code}, answer SDP: ${answer.sdp.substring(0, 100)}...`);
       const peerConnection = peerConnections.get(targetId);
       if (!peerConnection) {
         console.warn(`No peer connection for ${targetId}, ignoring answer`);
@@ -462,34 +493,32 @@
         console.error(`Received invalid answer type from ${targetId}:`, answer.type);
         return;
       }
-      const answerKey = `${targetId}-${answer.sdp.substring(0, 50)}`; // Basic deduplication key
+      const answerKey = `${targetId}-${answer.sdp.substring(0, 50)}`;
       if (processedAnswers.has(answerKey)) {
-        console.warn(`Duplicate answer from ${targetId} ignored`);
-        return;
-      }
-      processedAnswers.add(answerKey);
-      if (peerConnection.signalingState === 'stable' && peerConnection.connectionState === 'connected') {
-        console.warn(`Answer from ${targetId} ignored: connection already established (signalingState: ${peerConnection.signalingState}, connectionState: ${peerConnection.connectionState})`);
+        console.log(`Duplicate answer from ${targetId} ignored`);
         return;
       }
       if (peerConnection.signalingState !== 'have-local-offer') {
-        console.warn(`Unexpected signaling state for ${targetId}: ${peerConnection.signalingState}, expected have-local-offer`);
+        console.log(`Ignoring answer from ${targetId}: signalingState=${peerConnection.signalingState}, expected have-local-offer`);
         return;
       }
-      peerConnection.setRemoteDescription(new RTCSessionDescription(answer)).then(() => {
+      processedAnswers.add(answerKey);
+      try {
+        await peerConnection.setRemoteDescription(new RTCSessionDescription(answer));
         console.log(`Successfully set remote description for answer from ${targetId}`);
         const queue = candidatesQueues.get(targetId) || [];
         queue.forEach(candidate => {
           handleCandidate(candidate, targetId);
         });
         candidatesQueues.set(targetId, []);
-      }).catch(error => {
+      } catch (error) {
         console.error(`Error setting remote description for answer from ${targetId}:`, error);
-      });
+        statusElement.textContent = 'Failed to process answer. Please try again.';
+      }
     }
 
     function handleCandidate(candidate, targetId) {
-      console.log(`Handling ICE candidate from ${targetId} for code: ${code}`);
+      console.log(`Handling ICE candidate from ${targetId} for code: ${code}, candidate: ${JSON.stringify(candidate)}`);
       const peerConnection = peerConnections.get(targetId);
       if (peerConnection && peerConnection.remoteDescription) {
         peerConnection.addIceCandidate(new RTCIceCandidate(candidate)).then(() => {
@@ -585,6 +614,11 @@
       statusElement.textContent = 'Waiting for connection...';
       console.log(`Starting chat with username: ${username}, code: ${code}`);
       socket.send(JSON.stringify({ type: 'join', code, username }));
+      joinTimeout = setTimeout(() => {
+        console.log(`Join timeout: no other clients joined code ${code}`);
+        statusElement.textContent = 'No one joined. Try a new session.';
+        newSessionButton.click();
+      }, 30000);
     };
 
     document.getElementById('connectButton').onclick = () => {
@@ -594,8 +628,8 @@
         statusElement.textContent = 'Invalid username: 1-16 alphanumeric characters required.';
         return;
       }
-      if (!inputCode) {
-        statusElement.textContent = 'Please enter a valid code.';
+      if (!validateCode(inputCode)) {
+        statusElement.textContent = 'Invalid code format: use xxxx-xxxx-xxxx-xxxx.';
         return;
       }
       username = usernameInput;
@@ -608,18 +642,25 @@
       statusElement.textContent = 'Connecting...';
       console.log(`Connecting with username: ${username}, code: ${code}`);
       socket.send(JSON.stringify({ type: 'join', code, username }));
+      joinTimeout = setTimeout(() => {
+        console.log(`Join timeout: failed to connect to code ${code}`);
+        statusElement.textContent = 'Connection failed. Try a new session.';
+        newSessionButton.click();
+      }, 30000);
     };
 
     document.getElementById('backButton').onclick = () => {
       usernameContainer.classList.add('hidden');
       initialContainer.classList.remove('hidden');
       statusElement.textContent = 'Start a new chat or connect to an existing one';
+      clearTimeout(joinTimeout);
     };
 
     document.getElementById('backButtonConnect').onclick = () => {
       connectContainer.classList.add('hidden');
       initialContainer.classList.remove('hidden');
       statusElement.textContent = 'Start a new chat or connect to an existing one';
+      clearTimeout(joinTimeout);
     };
 
     document.getElementById('sendButton').onclick = () => {
@@ -696,3 +737,4 @@
   </script>
 </body>
 </html>
+```
