--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           totalClients = message.totalClients;
           console.log(`Client ${message.clientId} disconnected from code: ${code}, total: ${totalClients}`);
           usernames.delete(message.clientId);
-          console.log(`Removed username for client ${message.clientId}, usernames: ${[...usernames.entries()]}`);
+          console.log(`Removed username for client ${message.clientId}, usernames: ${[...usnames.entries()]}`);
           cleanupPeerConnection(message.clientId);
           updateMaxClientsUI();
         }
@@ -271,11 +271,6 @@
             ],
             username: '8008f3d422fbe49ca4157b23',
             credential: 'E7rLb3LegFMDdjem'
-          },
-          {
-            urls: 'turn:turn.anyfirewall.com:3478',
-            username: 'webrtc',
-            credential: 'webrtc'
           }
         ],
         iceTransportPolicy: 'all'
@@ -306,11 +301,6 @@
 
       peerConnection.onicegatheringstatechange = () => {
         console.log(`ICE gathering state for ${targetId}: ${peerConnection.iceGatheringState}`);
-        if (peerConnection.iceGatheringState === 'complete' && isOfferer) {
-          clearTimeout(iceTimeout);
-          console.log(`ICE gathering complete, sending offer to ${targetId}`);
-          socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code, targetId }));
-        }
       };
 
       peerConnection.onconnectionstatechange = () => {
@@ -331,7 +321,7 @@
           console.log(`WebRTC connection established with ${targetId} for code: ${code}`);
           isConnected = true;
           retryCounts.delete(targetId);
-          clearTimeout(iceTimeout);
+          clearTimeout(connectionTimeouts.get(targetId));
           updateMaxClientsUI();
         }
       };
@@ -352,19 +342,22 @@
         dataChannels.set(targetId, dataChannel);
       };
 
-      let iceTimeout;
       if (isOfferer) {
         peerConnection.createOffer().then(offer => {
           console.log(`Created offer for ${targetId}: ${offer.sdp.substring(0, 100)}...`);
           return peerConnection.setLocalDescription(offer);
         }).then(() => {
           console.log(`Local description set for ${targetId}`);
-          iceTimeout = setTimeout(() => {
-            if (peerConnection.iceGatheringState !== 'complete') {
-              console.log(`ICE gathering timeout, sending offer to ${targetId}`);
-              socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code, targetId }));
+          socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code, targetId }));
+          const iceTimeout = setTimeout(() => {
+            console.log(`ICE gathering timeout for ${targetId}`);
+          }, 10000);
+          const queue = candidatesQueues.get(targetId) || [];
+          queue.forEach(item => {
+            if (item.type === 'answer') {
+              handleAnswer(item.answer, targetId);
             }
-          }, 30000);
+          });
         }).catch(error => {
           console.error(`Error creating offer for ${targetId}:`, error);
           statusElement.textContent = 'Failed to create offer. Please try again.';
@@ -384,7 +377,7 @@
             statusElement.textContent = 'Connection failed after retries. Please try a new session.';
           }
         }
-      }, 30000);
+      }, 10000);
       connectionTimeouts.set(targetId, timeout);
     }
 
@@ -482,45 +475,35 @@
     }
 
     async function handleAnswer(answer, targetId) {
-  console.log(`Handling answer from ${targetId} for code: ${code}, answer SDP: ${answer.sdp.substring(0, 100)}...`);
-  const peerConnection = peerConnections.get(targetId);
-  if (!peerConnection) {
-    console.warn(`No peer connection for ${targetId}, ignoring answer`);
-    return;
-  }
-  if (answer.type !== 'answer') {
-    console.error(`Received invalid answer type from ${targetId}:`, answer.type);
-    return;
-  }
-  const answerKey = `${targetId}-${answer.sdp.substring(0, 50)}`;
-  if (processedAnswers.has(answerKey)) {
-    console.log(`Duplicate answer from ${targetId} ignored`);
-    return;
-  }
-  if (peerConnection.signalingState !== 'have-local-offer') {
-    console.log(`Queuing answer from ${targetId}: signalingState=${peerConnection.signalingState}, expected have-local-offer`);
-    candidatesQueues.get(targetId).push({ type: 'answer', answer });
-    return;
-  }
-  processedAnswers.add(answerKey);
-  try {
-    await peerConnection.setRemoteDescription(new RTCSessionDescription(answer));
-    console.log(`Successfully set remote description for answer from ${targetId}`);
-    const queue = candidatesQueues.get(targetId) || [];
-    queue.forEach(item => {
-      if (item.type === 'candidate') {
-        handleCandidate(item.candidate, targetId);
+      console.log(`Handling answer from ${targetId} for code: ${code}, answer SDP: ${answer.sdp.substring(0, 100)}...`);
+      const peerConnection = peerConnections.get(targetId);
+      if (!peerConnection) {
+        console.warn(`No peer connection for ${targetId}, ignoring answer`);
+        return;
       }
-    });
-    candidatesQueues.set(targetId, []);
-  } catch (error) {
-    console.error(`Error setting remote description for answer from ${targetId}:`, error);
-    statusElement.textContent = 'Failed to process answer. Please try again.';
-  }
-}
+      if (answer.type !== 'answer') {
+        console.error(`Received invalid answer type from ${targetId}:`, answer.type);
+        return;
+      }
+      const answerKey = `${targetId}-${answer.sdp.substring(0, 50)}`;
+      if (processedAnswers.has(answerKey)) {
+        console.log(`Duplicate answer from ${targetId} ignored`);
+        return;
+      }
+      if (peerConnection.signalingState !== 'have-local-offer') {
+        console.log(`Queuing answer from ${targetId}: signalingState=${peerConnection.signalingState}, expected have-local-offer`);
+        candidatesQueues.get(targetId).push({ type: 'answer', answer });
+        return;
+      }
+      processedAnswers.add(answerKey);
+      try {
+        await peerConnection.setRemoteDescription(new RTCSessionDescription(answer));
+        console.log(`Successfully set remote description for answer from ${targetId}`);
         const queue = candidatesQueues.get(targetId) || [];
-        queue.forEach(candidate => {
-          handleCandidate(candidate, targetId);
+        queue.forEach(item => {
+          if (item.type === 'candidate') {
+            handleCandidate(item.candidate, targetId);
+          }
         });
         candidatesQueues.set(targetId, []);
       } catch (error) {
@@ -630,7 +613,7 @@
         console.log(`Join timeout: no other clients joined code ${code}`);
         statusElement.textContent = 'No one joined. Try a new session.';
         newSessionButton.click();
-      }, 30000);
+      }, 10000);
     };
 
     document.getElementById('connectButton').onclick = () => {
@@ -658,7 +641,7 @@
         console.log(`Join timeout: failed to connect to code ${code}`);
         statusElement.textContent = 'Connection failed. Try a new session.';
         newSessionButton.click();
-      }, 30000);
+      }, 10000);
     };
 
     document.getElementById('backButton').onclick = () => {
