--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           },
           {
             urls: [
-              'turn:relay1.expressturn.com:3480',
+              'turn:relay1.expressturn.com:3480?transport=udp',
               'turn:relay1.expressturn.com:3480?transport=tcp'
             ],
             username: '000000002066560922',
