--- a/index.html
+++ b/index.html
@@ -293,20 +293,12 @@
           { urls: 'stun:stun.relay.metered.ca:80' },
           { urls: 'stun:stun.freeswitch.org:3478' },
           {
-            urls: [
-              'turn:global.relay.metered.ca:80',
-              'turn:global.relay.metered.ca:443',
-              'turn:global.relay.metered.ca:80?transport=tcp',
-              'turns:global.relay.metered.ca:443?transport=tcp'
-            ],
+            urls: 'turn:global.relay.metered.ca:443?transport=tcp',
             username: '8008f3d422fbe49ca4157b23',
             credential: 'E7rLb3LegFMDdjem'
           },
           {
-            urls: [
-              'turn:relay1.expressturn.com:3480?transport=udp',
-              'turn:relay1.expressturn.com:3480?transport=tcp'
-            ],
+            urls: 'turn:relay1.expressturn.com:3478?transport=tcp',
             username: '000000002066560922',
             credential: 'KbPraDRQJfdBPGf4zBA7GJp31qY='
           }
@@ -334,7 +326,7 @@
       };
 
       peerConnection.onicecandidateerror = (event) => {
-        console.error(`ICE candidate error for ${targetId}: address=${event.address}, port=${event.port}, errorCode=${event.errorCode}, errorText=${event.errorText}, url=${event.url}, network=${navigator.connection?.type || 'unknown'}`);
+        console.error(`ICE candidate error for ${targetId}: address=${event.address}, port=${event.port}, errorCode=${event.errorCode}, errorText=${event.errorText}, url=${event.url}, network=${navigator.connection?.type || 'unknown'}, timestamp=${new Date().toISOString()}`);
       };
 
       peerConnection.onicegatheringstatechange = () => {
